# domestic-meta

./: .gitignore  README.md  docker-compose.yml  plan.md  research.md  tmp_riss_lod_thesis.html  tmp_riss_lod_thesis.json  tmp_riss_paging.json  tmp_riss_property.html  tmp_riss_simple_query.xml  tmp_riss_sparql.html  tmp_riss_sparql.js  tmp_riss_sparql_result.json  tmp_riss_sparql_result.xml  tmp_www_riss_bib_t.html  tmp_www_riss_bib_t_100.html  tmp_www_riss_bib_t_i10.html  tmp_www_riss_bib_t_p2.html  tmp_www_riss_re_s.html  tmp_www_riss_search.html  tmp_www_riss_search.js
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260319_0001_initial_schema.py  20260320_0002_pipeline_events.py  20260320_0003_extraction_revisions.py
backend/app/: main.py
backend/app/agents/: README.md
backend/app/api/: dependencies.py  router.py
backend/app/core/: config.py  constants.py  utils.py
backend/app/models/: domain.py
backend/app/repositories/: db_models.py  file_store.py  memory.py  sqlalchemy_store.py
backend/app/schemas/: candidate.py  prisma.py  search.py
backend/app/services/: connectors.py  deduplication.py  document_ingestion.py  effect_size.py  export.py  extraction.py  extraction_management.py  (+10 more)
backend/tests/: test_config.py  test_connectors.py  test_effect_size.py  test_events.py  test_export.py  test_extraction.py  test_extraction_management.py  test_extraction_revisions.py  test_ingestion.py  test_main.py  test_ocr.py  test_prisma.py  test_prisma_flow.py  test_quality.py  test_review.py  test_screening.py  test_search_management.py  test_search_requests_api.py  test_search_summary.py  test_sqlalchemy_store.py
(+9 files in other folders)
