[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rissmeta-backend"
version = "0.1.0"
description = "Backend for an education meta-analysis support agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "pypdf>=5.0.0,<6.0.0",
]

[tool.setuptools]
packages = ["app"]
